[package]
name = "substrate-padawan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "substrate-padawan"

[[bin]]
name = "substrate-ground"
path = "src/ground.rs"

[dependencies]
clap = { version = "4", features = ["derive"]}
env_logger = "0.9"
futures = "0.3"
libp2p = { version = "0.50", features = ["tcp", "tokio", "noise", "yamux"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
unsigned-varint = "0.7"
void = "1"
