[package]
name = "substrate-padawan"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "substrate-swarm"
path = "src/bin/swarm.rs"

[[bin]]
name = "substrate-scratch"
path = "src/bin/scratch.rs"

[dependencies]
clap = { version = "4", features = ["derive"]}
env_logger = "0.9"
futures = "0.3"
libp2p = { version = "0.50", features = ["tcp", "tokio", "noise", "yamux"] }
prost = "0.11"
snow = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
unsigned-varint = "0.7"
void = "1"

[build-dependencies]
prost-build = "0.11"
